# silentwrite

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  agent.md  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  prettier.config.js  vite.config.js
public/: manifest.json
src/: App.css  App.jsx  GlobalMaskPanel.jsx  RightClickMenu.jsx  Titlebar.jsx  View.jsx  global.jsx  main.css  main.jsx  text.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/assets/: EditorView.css  Titlebar.css  WindowButtons.css  i18n.json  main.css  style.css
src/comp/: App.jsx  Editor.jsx  EditorView.jsx  HomeView.jsx  Titlebar.css  Titlebar.jsx  View.jsx  WindowButtons.css  WindowButtons.jsx
src/comp/Titlebar/: WindowButtons.jsx
src/comp/View/: EditorView.jsx  HomeView.jsx
src/components/: Editor.jsx  Home.css  Home.jsx  Library.jsx  Rightclick.jsx  Settings.jsx  Titlebar.css  Titlebar.jsx  WindowButtons.jsx  WindowControls.jsx  global.jsx
src/components/Titlebar/: Preferences.css  Preferences.jsx  Title.css  Title.jsx  WindowButtons.jsx  WindowControls.css  WindowControls.jsx
src/components/View/: EditorView.jsx  HomeView.jsx
src/components/basic/: Menu.jsx  Msgbox.jsx
src/global/: env.jsx  public.jsx
src/icons/: window-buttons.css  window-buttons.jsx
