[package]
name = "SilentWrite"
version = "0.1.0"
description = "SilentWrite is a simple, clear Markdown writing tool."
authors = ["ForYesify"]
edition = "2024"

[lib]
name = "silentwrite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

